# card-access-plugin

./: .gitignore  pyproject.toml  requirements.txt
denhac_card_access/: bulk_card_sync.py  card_update_helper.py  config.py  double_tap_to_open_house.py  invite_slack_users.py  plugin.py  process_piecemeal_update.py  submit_card_scan.py
tests/: conftest.py  test_bulk_card_sync.py  test_card_update_helper.py  test_config.py  test_double_tap_to_open_house.py  test_invite_slack_users.py  test_process_piecemeal_update.py  test_submit_card_scan.py
